--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500;600;700&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Cormorant', serif;
+  
 }
+
 
 .App-logo {
   height: 40vmin;
